# axum-yew-db-proj

./: .gitignore  Cargo.toml  compose.yml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  routes.rs  structs.rs
db/: queries.sql
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/components/atoms/: custom_button.rs  text_input.rs
frontend/src/components/molecules/: custom_form.rs
